# InterviewPocketBook

./: App.qml  CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp  run.sh
BmpLib/: CMakeLists.txt  bmpdefs.h  bmpexceptions.cpp  bmpexceptions.h  bmpproxy.cpp  bmpproxy.h  bmpproxyimpl.cpp  bmpproxyimpl.h  bmprowindex.cpp  bmprowindex.h  bmputils.h  dynamicbitset.cpp  dynamicbitset.h
PocketBookPlugin/: CMakeLists.txt  compressionmodel.cpp  compressionmodel.h  filelistmodel.cpp  filelistmodel.h  pocketbookplugin.h  progressmodel.cpp  progressmodel.h  qmldir
PocketBookPlugin/qml/: CustomButton.qml  CustomDialog.qml  CustomDialogManager.qml  CustomProgressBar.qml  FileListModelDelegate.qml
